Fix z-index on cards

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,7 +100,7 @@ body {
 .card {
 	position: relative;
 	transition: all 0.4s ease;
-	z-index: 999;
+	z-index: 99;
 
 	&:hover {
 		transform: scale(1.1);
@@ -185,6 +185,7 @@ footer {
 
 .animate {
 	animation: popIn 1s ease;
+	animation-delay: 0.5s;
 }
 
 textarea {
